tests/cases/functions/errors/lambda-capture-local.ari
// check-function-errors: capture environments are rejected until closure storage is implemented.
fn main() -> i64 {
  let base: i64 = 2;
  let add_base: fn(i64) -> i64 = fn(value) -> {
    value + base
  };
  return add_base(1);
}
